Last commit for the night, just some minor alignment fixes

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -35,5 +35,40 @@
 }
 
 .home__social-link:hover {
-    color: hsl(43, 100%, 68% )
+    color: hsl(43, 100%, 68% );
+}
+
+.scroll__down {
+    position: absolute;
+    bottom: 2.5rem;
+    left: 0;
+    width: 100%;
+}
+
+.home__scroll-name {
+    font-size: var(--small-font-size);
+
+}
+
+.mouse {
+    border: 2px solid #454360;
+    display: block;
+    height: 1.6rem;
+    width: 1.25rem;
+    border-radius: 1rem;
+    position: relative;
+    margin: auto;
+    margin-top: .75rem;
+}
+
+.wheel {
+    background-color: var(--title-color);
+    border-radius: 100%;
+    width: 0.25rem;
+    height: 0.25rem;
+    position: absolute;
+    top: 0.5rem;
+    left: 50%;
+    transform: translateX(-50%);
+    animation: ani-mouse 2s linear infinite;
 }
